# PrivacyAware-PenAgent

./: .env.example  .gitignore  .isort.cfg  ARCHITECTURE.md  CI_CD_PIPELINE.md  CLAUDE.md  GITHUB_SETUP.md  IMPLEMENTATION_PLAN.md  LLM_PenTest_Agent_Capstone_Full_Export.md  README.md  RISK_REGISTER.md  SCRIPT_UPDATE_SYSTEM.md  TASK_SYSTEM.md  TEAM_ROLES.md  VALIDATION_SYSTEM.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: ci-build.yml  ci-lint.yml  ci-security.yml  ci-test.yml  ci.yml
docs/: llm_benchmarks.md  llm_benchmarks_20260620_1057.json
scripts/: benchmark_runner.py  check_hardcoded_ips.py  llm_benchmark.py
src/: __init__.py  main.py
src/agents/: __init__.py  exploit_agent.py  orchestrator.py  recon_agent.py  verification_agent.py
src/config/: __init__.py  prompts.py  settings.py
src/reporting/: __init__.py
src/router/: __init__.py  complexity.py  cost_tracker.py  llm_client.py  llm_router.py  sensitivity.py
src/state/: __init__.py  attack_graph.py  persistence.py  schemas.py
src/tools/: __init__.py  cve_mapper.py  gobuster_wrapper.py  metasploit_rpc.py  nmap_wrapper.py  searchsploit.py
src/utils/: __init__.py  logger.py  logging_config.py  validators.py  visualize.py
tests/: __init__.py  conftest.py
tests/fixtures/: nmap_sample.xml
tests/integration/: __init__.py
tests/unit/: __init__.py  test_attack_graph.py  test_complexity.py  test_cost_tracker.py  test_cve_mapper.py  test_exploit_agent.py  test_gobuster_wrapper.py  test_llm_client.py  test_logger.py  test_main.py  test_metasploit_rpc.py  test_nmap_wrapper.py  test_orchestrator.py  test_orchestrator_nodes.py  test_persistence.py  test_prompts.py  test_recon_agent.py  test_router.py  test_schemas.py  test_searchsploit.py  test_sensitivity.py  test_validators.py  test_visualize.py
